--- a/editor.css
+++ b/editor.css
@@ -103,7 +103,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
   text-align: center;
 }
 .wp-site-blocks .wp-block-search__inside-wrapper {
-  column-gap: calc(1 * calc(0.5 * 1ch));
+  column-gap: calc(1 * 0.5ch);
   flex: unset;
 }
 .wp-site-blocks .wp-block-search__button {
@@ -447,13 +447,13 @@ svg {
   margin-right: auto;
   width: 90vw;
   max-width: 1200px;
-  min-height: calc(100vh - 3 * (1 * calc(2.0 * 1ch)));
+  min-height: calc(100vh - 3 * (1 * 2ch));
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: min-content 1fr min-content;
   grid-template-areas: "header" "content" "footer";
   column-gap: 0;
-  row-gap: calc(1 * calc(2.0 * 1ch));
+  row-gap: calc(1 * 2ch);
 }
 .wp-site-blocks .pp-header {
   grid-area: header;
@@ -464,7 +464,7 @@ svg {
 .wp-site-blocks .pp-site.pp-columns {
   display: flex;
   flex-flow: row nowrap;
-  gap: calc(1 * calc(2.0 * 1ch)) calc(2 * calc(0.5 * 1ch));
+  gap: calc(1 * 2ch) calc(2 * 0.5ch);
   place-content: stretch;
   place-items: stretch;
 }
@@ -489,7 +489,7 @@ svg {
 }
 @media screen and (min-width: 600px) and (max-width: 782px) {
   .wp-site-blocks .pp-site.pp-columns .pp-column.pp-sidebar {
-    flex: 1 1 calc(50% - 0.5 * (2 * calc(0.5 * 1ch)));
+    flex: 1 1 calc(50% - 0.5 * (2 * 0.5ch));
   }
 }
 @media screen and (max-width: 599px) {
@@ -514,7 +514,7 @@ svg {
 
 .pp-header {
   display: grid;
-  gap: calc(1 * calc(2.0 * 1ch)) calc(2 * calc(0.5 * 1ch));
+  gap: calc(1 * 2ch) calc(2 * 0.5ch);
   grid-template-columns: clamp(250px, 30%, 500px) 1fr;
   grid-template-rows: min-content;
   grid-template-areas: "site-logo site-title" "site-logo site-tagline" "site-logo site-nav" "site-search site-search";
@@ -541,7 +541,7 @@ svg {
 }
 .pp-header-fancy {
   display: grid;
-  gap: calc(0 * calc(2.0 * 1ch)) 0;
+  gap: calc(0 * 2ch) 0;
   grid-template-columns: 100%;
   grid-template-rows: min-content;
   grid-template-areas: "site-title" "site-logo" "site-tagline" "site-nav" "site-search";
@@ -557,7 +557,7 @@ svg {
 }
 .pp-header-no_titles {
   display: grid;
-  gap: calc(0 * calc(2.0 * 1ch)) 0;
+  gap: calc(0 * 2ch) 0;
   grid-template-columns: 100%;
   grid-template-rows: min-content;
   grid-template-areas: "site-logo" "site-nav" "site-search";
@@ -574,7 +574,7 @@ svg {
 }
 .pp-header-minimal {
   display: grid;
-  gap: calc(0 * calc(2.0 * 1ch)) 0;
+  gap: calc(0 * 2ch) 0;
   grid-template-columns: 100%;
   grid-template-rows: min-content;
   grid-template-areas: "site-title" "site-nav";
@@ -594,7 +594,7 @@ svg {
 .pp-header-cover .pp-cover .wp-block-cover__inner-container {
   grid-area: site-cover;
   display: grid;
-  gap: calc(5 * calc(2.0 * 1ch)) 0;
+  gap: calc(5 * 2ch) 0;
   grid-template-columns: 100%;
   grid-template-rows: min-content;
   grid-template-areas: "site-title" "site-tagline";
@@ -602,10 +602,10 @@ svg {
 
 .pp-header-navigation {
   display: flex;
-  column-gap: calc(4 * calc(0.5 * 1ch));
+  column-gap: calc(4 * 0.5ch);
 }
 .pp-header-navigation .wp-block-navigation__container {
-  column-gap: calc(4 * calc(0.5 * 1ch));
+  column-gap: calc(4 * 0.5ch);
 }
 
 .pp-block-navigation .submenu-container,
@@ -615,15 +615,15 @@ svg {
   align-content: stretch;
   align-items: stretch;
   justify-content: stretch;
-  column-gap: calc(4 * calc(0.5 * 1ch));
-  row-gap: calc(0.5 * calc(2.0 * 1ch));
+  column-gap: calc(4 * 0.5ch);
+  row-gap: calc(0.5 * 2ch);
 }
 .pp-template {
   align-content: stretch;
   align-items: stretch;
   display: flex;
   flex-flow: column nowrap;
-  gap: calc(1 * calc(2.0 * 1ch)) calc(0 * calc(0.5 * 1ch));
+  gap: calc(1 * 2ch) calc(0 * 0.5ch);
   justify-content: stretch;
 }
 
@@ -663,8 +663,8 @@ svg {
   grid-template-columns: 100%;
   grid-template-rows: repeat(1, min-content);
   grid-template-areas: "article";
-  column-gap: calc(2 * calc(0.5 * 1ch));
-  row-gap: calc(0.5 * calc(2.0 * 1ch));
+  column-gap: calc(2 * 0.5ch);
+  row-gap: calc(0.5 * 2ch);
 }
 .pp-template .wp-block-post .pp-article {
   grid-area: article;
@@ -724,7 +724,7 @@ svg {
   grid-template-columns: 100%;
   grid-template-areas: "article-header" "article-featured_image" "article-body" "article-footer";
   column-gap: 0;
-  row-gap: calc(0.5 * calc(2.0 * 1ch));
+  row-gap: calc(0.5 * 2ch);
 }
 .pp-template .wp-block-post .pp-article.pp-no-featured_image {
   grid-template-columns: 100%;
@@ -767,8 +767,8 @@ svg {
   grid-template-columns: 100%;
   grid-template-rows: repeat(2, min-content);
   grid-template-areas: "article" "navigation";
-  column-gap: calc(2 * calc(0.5 * 1ch));
-  row-gap: calc(0.5 * calc(2.0 * 1ch));
+  column-gap: calc(2 * 0.5ch);
+  row-gap: calc(0.5 * 2ch);
 }
 .pp-main:not(.pp-front-page) .pp-article {
   grid-area: article;
@@ -878,8 +878,8 @@ svg {
   grid-template-columns: 100%;
   grid-template-rows: repeat(1, min-content);
   grid-template-areas: "article";
-  column-gap: calc(2 * calc(0.5 * 1ch));
-  row-gap: calc(0.5 * calc(2.0 * 1ch));
+  column-gap: calc(2 * 0.5ch);
+  row-gap: calc(0.5 * 2ch);
 }
 .pp-main.pp-front-page .pp-article {
   grid-area: article;
@@ -939,7 +939,7 @@ svg {
   grid-template-columns: 100%;
   grid-template-areas: "article-header" "article-featured_image" "article-body" "article-footer";
   column-gap: 0;
-  row-gap: calc(0.5 * calc(2.0 * 1ch));
+  row-gap: calc(0.5 * 2ch);
 }
 .pp-main.pp-front-page .pp-article.pp-no-featured_image {
   grid-template-columns: 100%;
@@ -977,7 +977,7 @@ svg {
   place-self: center end;
 }
 .pp-main.pp-front-page .pp-template {
-  gap: calc(0.5 * calc(2.0 * 1ch)) calc(1 * calc(0.5 * 1ch));
+  gap: calc(0.5 * 2ch) calc(1 * 0.5ch);
 }
 @supports (grid-template-rows: masonry) {
   .pp-main.pp-front-page .pp-template {
@@ -995,16 +995,16 @@ svg {
     justify-content: center;
   }
   .pp-main.pp-front-page .pp-template .wp-block-post {
-    flex: 1 1 calc(33.3333333333% - 3 * (1 * calc(0.5 * 1ch)));
+    flex: 1 1 calc(33.3333333333% - 3 * (1 * 0.5ch));
   }
   @media screen and (max-width: 782px) {
     .pp-main.pp-front-page .pp-template .wp-block-post {
-      flex: 1 1 calc(50% - 3 * (1 * calc(0.5 * 1ch)));
+      flex: 1 1 calc(50% - 3 * (1 * 0.5ch));
     }
   }
   @media screen and (max-width: 599px) {
     .pp-main.pp-front-page .pp-template .wp-block-post {
-      flex: 1 1 calc(100% - 3 * (1 * calc(0.5 * 1ch)));
+      flex: 1 1 calc(100% - 3 * (1 * 0.5ch));
     }
   }
 }
@@ -1070,9 +1070,25 @@ svg {
   display: inline-block;
 }
 
+.wp-site-blocks .pp-query .pp-article-title {
+  font-size: 22px;
+}
 .wp-site-blocks .pp-focus .pp-article-title {
-  background: radial-gradient(#404040, transparent);
+  background: radial-gradient(white, transparent);
   text-shadow: 0 0 10px white;
+}
+@media screen and (min-width: 600px) and (max-width: 782px) {
+  .wp-site-blocks .pp-focus .pp-article-title {
+    font-size: 44px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .wp-site-blocks .pp-focus .pp-article-title {
+    font-size: 22px;
+  }
+}
+.wp-site-blocks .pp-focus .pp-article-featured_image {
+  box-shadow: 0 0 10px #404040;
 }
 
 .wp-block-code.ada {
@@ -1162,7 +1178,7 @@ svg {
 
 .wp-site-blocks button,
 .wp-site-blocks input[type=submit] {
-  padding: 0 clamp(1ch, 10 * calc(2.0 * 1ch), 3%);
+  padding: 0 clamp(1ch, 10 * 2ch, 3%);
 }
 .wp-site-blocks code.ada {
   color: #bf4040;
@@ -1327,6 +1343,18 @@ ol, ul, dl {
   background-color: inherit;
   color: inherit;
   text-decoration: none;
+}
+.wp-site-blocks .pp-header .pp-site-title {
+  margin: 0;
+  margin-block-start: 2ch;
+  margin-block-end: 2ch;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding: 0;
+  padding-block-start: 0;
+  padding-block-end: 0;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
 }
 .wp-site-blocks .pp-header .pp-cover .pp-header-site-title,
 .wp-site-blocks .pp-header .pp-cover .pp-header-site-tagline {
